# ZeroLaunch-rs

./: .commitlintrc.json  .gitignore  AGENTS.md  CLAUDE.md  CODE_SIGNING.md  CONFIG_SYSTEM_DESIGN.md  CONTRIBUTING.md  Cargo.toml  DESIGN_DECISIONS.md  FRONTEND_ARCHITECTURE.md  INSTALLATION_MONITOR_SDK_DESIGN.md  NEW_FRONTEND_REQUIREMENTS.md  NOTICE  PHASE_3_PROMPT.md  PHASE_4_PROMPT.md  PLUGIN_SDK_DESIGN.md  PRIVACY.md  README.md  REFACTORING_DESIGN.md  REQUIREMENTS_DOCUMENT.md  bun.lockb  docs-design-third-party-plugin-architec-zany-fog(1).md  find-bing-bing-everything-plan-ai-enchanted-clarke.md  index.html  justfile  package-lock.json  package.json  readme-cn.md  readme-cn2.md  readme-en.md  setting_window.html  tsconfig.json  vite.config.ts
crates/platform-windows/: Cargo.toml
crates/platform-windows/assets/: task_template.xml
crates/platform-windows/src/: app_enumerator.rs  app_launcher.rs  autostart.rs  capabilities.rs  com_guard.rs  focus_monitor.rs  hotkey.rs  icon.rs  installation_monitor.rs  lib.rs  lnk_resolver.rs  parameter_providers.rs  path_resolver.rs  resource_loader.rs  shell.rs  utils.rs  window.rs  window_positioner.rs
crates/plugin-api/: Cargo.toml  README.md
crates/plugin-api/src/: lib.rs
crates/plugin-api/src/common/: dir_utils.rs  image_utils.rs  mod.rs
crates/plugin-api/src/config/: component_core.rs  component_type.rs  configurable.rs  error.rs  mod.rs  setting_def.rs
crates/plugin-api/src/host/: builder.rs  cache_level.rs  error.rs  mod.rs  open_target.rs  plugin_handle.rs  sdk_config.rs
crates/plugin-api/src/mock/: helpers.rs  mod.rs  stubs.rs
crates/plugin-api/src/platform/: capabilities.rs  mod.rs
crates/plugin-api/src/plugin/: cached_candidate.rs  mod.rs  plugin_trait.rs  types.rs
crates/plugin-api/src/services/: icon_request.rs  mod.rs  parameter_types.rs
crates/plugin-api/tests/: mock_handle.rs
crates/plugin-host/: Cargo.toml
crates/plugin-host/src/: client.rs  host_dispatch.rs  lib.rs  manager.rs  process.rs
crates/plugin-host/src/adapter/: mod.rs  remote_component.rs  remote_configurable.rs  remote_data_source.rs  remote_executor.rs  remote_plugin.rs
crates/plugin-host/src/transport/: codec.rs  mod.rs  stdio.rs
crates/plugin-protocol/: Cargo.toml  README.md
crates/plugin-protocol/src/: codec.rs  error.rs  jsonrpc.rs  lib.rs  manifest.rs  messages.rs  methods.rs
crates/plugin-protocol/tests/: roundtrip.rs
crates/plugin-sdk-rust/: Cargo.toml  README.md
crates/plugin-sdk-rust/src/: host_proxy.rs  lib.rs  logging.rs  runtime.rs  trace.rs
plugin-template/: Cargo.toml  manifest.toml
plugin-template/src/: main.rs
plugin-template/ui/: panel.mjs
src-tauri/: .gitignore  Cargo.toml  config.js  config.json  tauri.conf.json  tauri.conf.portable.json
src-tauri/capabilities/: default.json
src-tauri/models/: readme.md
src-tauri/src/: bootstrap.rs  bridge_error.rs  config.rs  defer.rs  error.rs  image_loader.rs  interface.rs  keyboard_listener.rs  lib copy.rs  lib.rs  logging.rs  main.rs  sdk.rs  singleton.rs  tray.rs  ui_controller.rs  utils.rs  window_effect.rs  window_position.rs
src-tauri/src/api/: error.rs  mod.rs  read_api.rs  routes.rs  server.rs  types.rs
src-tauri/src/builtin_plugin/: mod.rs  readme.md
src-tauri/src/builtin_plugin/_template/: mod.rs  template_executor.rs
src-tauri/src/builtin_plugin/config/: appearance_config.rs  bias_config.rs  candidate_registry_config.rs  general_config.rs  hotkey_config.rs  icon_override_config.rs  installation_monitor_config.rs  mod.rs  storage_config.rs  window_behavior_config.rs
src-tauri/src/builtin_plugin/data_source/: app_source.rs  bookmark_source.rs  builtin_command_source.rs  command_source.rs  mod.rs  program_source.rs  url_source.rs
src-tauri/src/builtin_plugin/executor/: app_executor.rs  builtin_command_executor.rs  command_executor.rs  file_executor.rs  mod.rs  path_executor.rs  url_executor.rs  window_activate_executor.rs
src-tauri/src/builtin_plugin/keyword_injector/: alias_optimizer.rs  mod.rs
src-tauri/src/builtin_plugin/keyword_optimizer/: first_letter_extractor.rs  (+8 more)
src-tauri/src/cli_server/: middleware.rs  mod.rs  server.rs
src-tauri/src/commands/: bridge.rs  browser_bookmarks.rs  cli.rs  config_file.rs  debug.rs  file.rs  inspector.rs  mod.rs  new_search.rs  plugin.rs  program_service.rs  resource.rs  shortcut.rs  ui_command.rs  utils.rs
src-tauri/src/core/: app_command.rs  bias_rule.rs  bridge_error.rs  cli_token.rs  constants.rs  image_processor.rs  keyboard_listener.rs  mod.rs
src-tauri/src/data_handler/: mod.rs  search_model.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/plugin/: mod.rs  readme.md
src-tauri/src/plugin_framework/: builtin.rs  builtin_registry.rs  candidate_pipeline.rs  component_registry.rs  executor_registry.rs  host_handler.rs  inspector.rs  manager.rs  mod.rs  plugin_info.rs  plugin_installer.rs  registry.rs  search_pipeline.rs  service.rs  session_router.rs
src-tauri/src/plugin_loader/: discovery.rs  installer.rs  loader.rs  mod.rs
src-tauri/src/plugin_manager/: builtin.rs  manager.rs  mod.rs  types.rs
src-tauri/src/plugin_protocol_assets/: handler.rs
src-tauri/src/plugin_system/: adapter_registrar.rs  api.rs  builtin.rs  builtin_registry.rs  cached_candidate.rs  candidate_pipeline.rs  dispatcher.rs  executor_registry.rs  host_handler.rs  inspector.rs  launcher_registry.rs  manager.rs  mod.rs  plugin_info.rs  registry.rs  search_pipeline.rs  service.rs  session_router.rs  types.rs  zlplugin_protocol.rs
src-tauri/src/program_manager/: config.rs  image_loader.rs  mod.rs  pinyin_mapper.rs  program_launcher.rs  program_loader.rs  search_model.rs
src-tauri/src/sdk/: host_api.rs  mod.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/utils/: access_policy.rs  font_database.rs  i18n.rs  locale.rs  mod.rs  notify.rs  service_locator.rs  trace_id.rs  ui_controller.rs  waiting_hashmap.rs  windows.rs
src-tauri/src/window/: mod.rs
zerolaunch-cli/: Cargo.toml
zerolaunch-cli/src/: client.rs  main.rs  output.rs
zl-cli/: Cargo.toml
zl-cli/src/: main.rs
(+610 files in other folders)
