[workspace]
resolver = "2"
members = [
    "crates/platform-windows",
    "crates/plugin-api",
    "crates/plugin-protocol",
    "crates/plugin-host",
    "crates/plugin-sdk-rust",
    "zerolaunch-cli",
    "src-tauri",
]
exclude = ["xtask", "plugin-template"]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["ghost-him"]
license = "GPLv3"
repository = "https://github.com/ghost-him/ZeroLaunch-rs"

[workspace.dependencies]
# Common
async-trait = "0.1.89"
anyhow = "1.0.103"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
parking_lot = "0.12.5"
dashmap = { version = "6.2.1", features = ["serde"] }
once_cell = "1.21.4"
chrono = "0.4.45"
url = "2.5.8"
# time 固定在 0.3.47 —— 0.3.48+ 的 Parsable::parse API 变更破坏了 cookie 0.18.1 (tauri 传递依赖) 的兼容性
time = ">=0.3.47, <0.3.48"
walkdir = "2.5.0"
zip = "8.6.0"
regex = "1.12.4"
ini = "1.3.0"
fontdb = "0.23.0"
image = "0.25.10"
resvg = "0.47.0"
usvg = "0.47.0"
tiny-skia = "0.12.0"
encoding_rs = "0.8.35"
reqwest = { version = "0.13.4", features = ["json"] }
reqwest_dav = "0.3.3"
blake3 = "1.8.5"
fnv = "1.0.7"
lru = "0.18.0"
uuid = { version = "1.23.4", features = ["v4"] }
bincode-next = "3.1.1"
kmeans_colors = "0.7.1"
palette = "0.7.6"
rand = "0.10.1"
rayon = "1.12.0"
toml = "1.1"
semver = "1"
futures = "0.3"
mockall = "0.15"
# Windows
windows = "0.62.2"
windows-core = "0.62.2"
winreg = "0.56.0"
widestring = "1.2.1"
uiautomation = "0.25.0"
rdev = { version = "0.5.3", features = ["unstable_grab"] }
arboard = "3.6.1"
whoami = "2.1.2"
lnk = "0.6.4"
scraper = "0.27.0"
backtrace = "0.3.76"
base64 = "0.22"

# Tauri / HTTP / Server
tauri = { version = "^2", features = ["tray-icon"] }
tauri-build = { version = "^2", features = [] }
tauri-utils = { version = "2.9.3", features = ["schema"] }
tauri-plugin-global-shortcut = "^2.3.2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "^2"
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "trace"] }
http = "1"
lazy_static = "1.5.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"
timer = "0.2.0"
globset = "0.4.18"
fuzzy-matcher = "0.3.7"
tempfile = "3.27.0"
notify = "8.2.0"
inventory = "0.3"
dirs = "6"

# Internal
zerolaunch-plugin-api = { path = "crates/plugin-api" }
zerolaunch-plugin-host = { path = "crates/plugin-host" }
zerolaunch-plugin-protocol = { path = "crates/plugin-protocol" }
zerolaunch-plugin-sdk-rust = { path = "crates/plugin-sdk-rust" }
zerolaunch-platform-windows = { path = "crates/platform-windows" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
