[package]
name = "zerolaunch-rs"
version = "0.5.2"
description = "🚀 Lightning-fast, accurate, lightweight & pure Windows application launcher!"
authors = ["ghost-him"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zerolaunch_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
windows = { version = "0.61.3", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Management_Deployment",
    "Win32_System_Threading",
    "Foundation",
    "Win32_Security",
    "Foundation_Collections",
    "System",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Storage_Streams",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Variant",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_Networking",
    "Win32_Networking_WinInet",
    "Win32_Globalization",
    "Win32_System_LibraryLoader",
    "Win32_System_Environment"
] }

tauri = { version = "^2", features = ["tray-icon", "image-ico", "image-png"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
lazy_static = "^1.5.0"
rdev = { version = "^0.5.3", features = ["unstable_grab"] }
widestring = "^1.2.1"
windows-core = "^0.61.2"
rayon = "^1.11.0"
base64 = "^0.22.1"
dashmap = "^6.1.0"
image = "^0.25.8"
tracing = "^0.1.41"
tracing-subscriber = { version = "^0.3.20", features = ["env-filter"] }
tracing-appender = "^0.2.3"
chrono = "^0.4.42"
parking_lot = "^0.12.5"
tauri-plugin-global-shortcut = "^2.3.1"
tauri-plugin-dialog = { version = "^2.4.2" }
timer = "^0.2.0"
backtrace = "^0.3.76"
tauri-plugin-notification = "^2"
kmeans_colors = "^0.7.1"
palette = "^0.7.6"
rand = "^0.9.2"
anyhow = "1.0.100"
reqwest = { version = "0.12.24", features = ["json"] }
lnk = "0.6.3"
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["full"] }
reqwest_dav = "0.2.2"
tauri-plugin-deep-link = "2"
winreg = "0.55.0"
tauri-utils = { version = "2.8.0", features = ["schema"] }
device_query = "4.0.1"
globset = "0.4.18"
regex = "1.12.2"
scraper = "0.24.0"
url = "2.5.7"
fnv = "1.0.7"
fontdb = "0.23.0"
time = "0.3.44"
resvg = "0.45.1"
usvg = "0.45.1"
tiny-skia = "0.11.4"
encoding_rs = "0.8.35"
tauri-plugin-shell = "2"
fuzzy-matcher = "0.3.7"
ini = "1.3.0"
thiserror = "2.0.17"
tempfile = "3.23.0"
tokio-util = "0.7.16"
walkdir = "2.5.0"
ort = { version = "2.0.0-rc.10", features = ["xnnpack"], optional = true }
tokenizers = { version = "0.22.1", default-features = false, features = ["onig"], optional = true }
ndarray = { version = "0.16.1", optional = true }
once_cell = "1.21.3"
lru = "0.16.2"
bincode = "2.0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
portable = []
ai = [
    "dep:ort",
    "dep:tokenizers",
    "dep:ndarray",
]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "^2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
