[package]
name = "zerolaunch-rs"
version = "0.6.12"
description = "🚀 Lightning-fast, accurate, lightweight & pure Windows application launcher!"
authors = ["ghost-him"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zerolaunch_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Management_Deployment",
    "Win32_System_Threading",
    "Foundation",
    "Win32_Security",
    "Foundation_Collections",
    "System",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Storage_Streams",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Variant",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_Networking",
    "Win32_Networking_WinInet",
    "Win32_Globalization",
    "Win32_System_LibraryLoader",
    "Win32_System_Environment",
] }

tauri = { version = "^2", features = ["tray-icon", "image-ico", "image-png"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
lazy_static = "^1.5.0"
rdev = { version = "^0.5.3", features = ["unstable_grab"] }
widestring = "^1.2.1"
windows-core = "^0.62.2"
rayon = "^1.12.0"
base64 = "^0.22.1"
dashmap = { version = "^6.1.0", features = ["serde"] }
image = "^0.25.10"
tracing = "^0.1.44"
tracing-subscriber = { version = "^0.3.23", features = ["env-filter"] }
tracing-appender = "^0.2.5"
chrono = "^0.4.44"
parking_lot = "^0.12.5"
tauri-plugin-global-shortcut = "^2.3.1"
tauri-plugin-dialog = "2"
timer = "^0.2.0"
backtrace = "^0.3.76"
tauri-plugin-notification = "^2"
kmeans_colors = "^0.7.1"
palette = "^0.7.6"
rand = "^0.10.1"
anyhow = "1.0.102"
reqwest = { version = "0.13.3", features = ["json"] }
lnk = "0.6.4"
async-trait = "0.1.89"
tokio = { version = "1.52.3", features = ["full"] }
reqwest_dav = "0.3.3"
tauri-plugin-deep-link = "2"
winreg = "0.56.0"
tauri-utils = { version = "2.9.2", features = ["schema"] }
globset = "0.4.18"
regex = "1.12.3"
scraper = "0.27.0"
url = "2.5.8"
fnv = "1.0.7"
fontdb = "0.23.0"
time = "0.3.47"
resvg = "0.47.0"
usvg = "0.47.0"
tiny-skia = "0.12.0"
encoding_rs = "0.8.35"
tauri-plugin-shell = "2"
fuzzy-matcher = "0.3.7"
ini = "1.3.0"
thiserror = "2.0.18"
tempfile = "3.27.0"
uuid = { version = "1.23.1", features = ["v4"] }
tokio-util = "0.7.18"
walkdir = "2.5.0"
once_cell = "1.21.4"
lru = "0.18.0"
bincode-next = "3.0.0-rc.14"
arboard = "3.6.1"
zip = "8.6.0"
whoami = "2.1.2"
blake3 = "1.8.5"
notify = "8.2.0"
uiautomation = "0.25.0"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
portable = []

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
everything-rs = "0.1.10"
everything-sys-bindgen = "0.1.5"
