[package]
name = "zerolaunch-rs"
version = "1.0.0"
description = "🚀 Lightning-fast, accurate, lightweight & pure Windows application launcher!"
authors = ["ghost-him"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zerolaunch_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
# Windows platform (features extend workspace base)
windows = { workspace = true, features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Management_Deployment",
    "Win32_System_Threading",
    "Foundation",
    "Win32_Security",
    "Foundation_Collections",
    "System",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Storage_Streams",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Variant",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_Networking",
    "Win32_Networking_WinInet",
    "Win32_Globalization",
    "Win32_System_LibraryLoader",
    "Win32_System_Environment",
] }

# Tauri (adds features on top of workspace base)
tauri = { workspace = true, features = ["image-ico", "image-png"] }

# Tauri plugins
tauri-plugin-global-shortcut.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-notification.workspace = true
tauri-plugin-deep-link.workspace = true
tauri-plugin-shell.workspace = true
tauri-utils.workspace = true

# HTTP server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true

# Logging & observability
tracing-subscriber.workspace = true
tracing-appender.workspace = true
inventory.workspace = true

# Standalone utility deps
lazy_static.workspace = true
timer.workspace = true
globset.workspace = true
fuzzy-matcher.workspace = true
tempfile.workspace = true
notify.workspace = true

# Workspace-managed common deps
serde.workspace = true
serde_json.workspace = true
rdev.workspace = true
widestring.workspace = true
windows-core.workspace = true
rayon.workspace = true
dashmap.workspace = true
image.workspace = true
tracing.workspace = true
chrono.workspace = true
parking_lot.workspace = true
backtrace.workspace = true
kmeans_colors.workspace = true
palette.workspace = true
anyhow.workspace = true
reqwest.workspace = true
lnk.workspace = true
async-trait.workspace = true
tokio.workspace = true
reqwest_dav.workspace = true
winreg.workspace = true
scraper.workspace = true
url.workspace = true
fnv.workspace = true
fontdb.workspace = true
resvg.workspace = true
usvg.workspace = true
tiny-skia.workspace = true
encoding_rs.workspace = true
ini.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio-util.workspace = true
walkdir.workspace = true
once_cell.workspace = true
lru.workspace = true
bincode-next.workspace = true
arboard.workspace = true
zip.workspace = true
whoami.workspace = true
blake3.workspace = true
uiautomation.workspace = true
toml.workspace = true
rand.workspace = true
regex.workspace = true
base64.workspace = true
time.workspace = true

# Internal crates
zerolaunch-plugin-api.workspace = true
zerolaunch-plugin-host.workspace = true
zerolaunch-plugin-protocol.workspace = true
zerolaunch-platform-windows.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
portable = []
inspector = []

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance.workspace = true
