[package]
name = "zl"
version = "0.6.12"
description = "ZeroLaunch CLI — 命令行搜索工具，通过 HTTP 与 ZeroLaunch 主进程通信"
authors = ["ghost-him"]
edition = "2021"

[[bin]]
name = "zl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
