[package]
name = "zerolaunch-plugin-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ZeroLaunch plugin SDK — traits, data types, host API surface."

[features]
default = ["webdav"]
webdav = ["dep:reqwest_dav"]
mock = ["dep:mockall"]

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
blake3.workspace = true
bincode-next.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
image.workspace = true
resvg.workspace = true
usvg.workspace = true
tiny-skia.workspace = true
tokio.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
reqwest_dav = { workspace = true, optional = true }
kmeans_colors.workspace = true
palette.workspace = true
rand.workspace = true
rayon.workspace = true
walkdir.workspace = true
mockall = { workspace = true, optional = true }
