[package]
name = "zerolaunch-plugin-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ZeroLaunch plugin JSON-RPC protocol definitions."

[dependencies]
zerolaunch-plugin-api.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
semver.workspace = true
