[package]
name = "zerolaunch-plugin-sdk-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust SDK for writing ZeroLaunch third-party plugins."

[dependencies]
zerolaunch-plugin-api.workspace = true
zerolaunch-plugin-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap.workspace = true
base64.workspace = true
